--- a/app/views/crunch_algorithms/show.html.erb
+++ b/app/views/crunch_algorithms/show.html.erb
@@ -8,6 +8,11 @@
 </p>
 
 <p>
+  <strong>Application Type:</strong>
+    <%= @crunch_algorithm.category 	%>
+</p>
+
+<p>
   <strong>Functions:</strong>
     <div style="margin-left: 2em">
       <% @crunch_algorithm.functions.each do |f| %>
