rearrange functions directories

--- a/app/views/data_sources/show.html.erb
+++ b/app/views/data_sources/show.html.erb
@@ -9,5 +9,11 @@
 	(<%= dt[:data_type] %>) <br>
 <% end %>
 
+<h3>Calculated Dimensions:</h3>
+<% @data_source.calculated_dimensions.each do |cd| %>
+	<b><%= cd["name"] %></b>  => 
+	<b><%= cd["calculation"] %></b><br>
+<% end %>
+
 <%= link_to 'Edit', edit_data_source_path(@data_source) %> |
 <%= link_to 'Back', data_sources_path %>
