--- a/app/views/data_sources/_form.html.erb
+++ b/app/views/data_sources/_form.html.erb
@@ -50,6 +50,12 @@
       <% end %>
   </div>
 
+  <%= f.label :calculated_dimensions %> <br>
+  <% @data_source.calculated_dimensions.each_with_index do |cd, i| %>
+      <input style="width=1000px" name="data_source[calculated_dimensions][<%=i%>]" value="<%=@data_source.calculated_dimensions%>" type="text"><br>
+  <%end%>
+
+
   <div class="actions">
     <%= f.submit %>
   </div>
